feat: route create movie and global error
